# ninety-nine-problems

./: README.md  ninety-nine-problems.cabal
src/: Lists.hs  P01_last_element_of_list.hs
testsuite/: ListsTest.hs
testsuite/tests/: P01_last_element_of_list.hs  P01_last_element_of_list_test.hs
